# beets-PlaylistConverter

./: .gitignore  LICENSE  README.md  setup.cfg
beets_playlistconverter.egg-info/: PKG-INFO  SOURCES.txt
beetsplug/: playlistconverter.py
