[metadata]
name = beets-playlistconverter
version = 1.0.0
author = Moritz Grede
author_email = me@moritzgre.de
description = beets plugin to convert playlists between four file formats. Supports posix, ntfs and their uri counterparts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/moritzgrede/beets-PlaylistConverter
license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
requires =
    os
    platform
    subprocess
    beets
    optparse
    glob
    urllib
    json
    pathlib
    fnmatch
    re
    copy
    optparse

[options]
packages = beetsplug
python_requires = >=3.9